fix image on mobile

--- a/styles/book.scss
+++ b/styles/book.scss
@@ -13,7 +13,7 @@
 }
 
 .book-img {
-    min-width: 300px;
+    width: 300px;
     @include BoxShadow(8);
 }
 .purchase-links-flex {
