--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -63,9 +63,8 @@
 
 @media only screen and (max-width: 380px) {
     .navbar-container {
-        position: absolute;
-        width: 95%;
-        margin-left: 15.5%;
-        height: 65px;
+        display: none;
     }
 }
+
+
